updated get_summoner to get return summoner objects and update the database

--- a/app/views/summoner/show.html.erb
+++ b/app/views/summoner/show.html.erb
@@ -1,6 +1,6 @@
 <h1>Summoner#show</h1>
 <p>Find me in app/views/summoner/show.html.erb</p>
 <p>Username: <%= @username %></p>
-<p>Result: <%= @result %></p>
+<p>Summoner: <%= @summoner.inspect %></p>
 
 
